kube/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jupyterlab
  name: jupyterlab
  namespace: jupyterlab
spec:
  selector:
    app: jupyterlab
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
  type: LoadBalancer
