kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: jupyterlab
status:
  loadBalancer:
    ingress:
      - ip: 127.0.0.1
spec:
  ingressClassName: public
  rules:
    - host: www.pydoc.com.br
      http:
        paths:
          - path: /abcd/
            pathType: Prefix
            backend:
              service:
                name: jupyterlab
                port:
                  number: 8000
          - path: /fabiocax/
            pathType: Prefix
            backend:
              service:
                name: jupyterlab-fabiocax
                port:
                  number: 8000
    - host: pydoc.com.br
      http:
        paths:
          - path: /abcd/
            pathType: Prefix
            backend:
              service:
                name: jupyterlab
                port:
                  number: 5001
          - path: /fabiocax/
            pathType: Prefix
            backend:
              service:
                name: jupyterlab-fabiocax
                port:
                  number: 5001
